# bitstride

./: .gitignore  Cargo.toml  README.md  stride.example.toml
.github/workflows/: ci.yml
balancer/: Cargo.toml  build.rs
balancer/src/: balancer.rs  config.rs  grpc.rs  health.rs  main.rs  metric.rs  persistence.rs  pool.rs  priority_queue.rs  proxy.rs  register.rs  success.rs  traits.rs
daemon/: Cargo.toml  build.rs
daemon/src/: health.rs  main.rs  register.rs
docs/: balancer.excalidraw
proto/: health.proto  register.proto
