[package]
name = "balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.22"
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros", "migrate" ] }

[build-dependencies]
tonic-build = "*"